--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="row">
             <div class="col-lg-3">
-                <div class="card border-danger" style="width: 18rem;">
+                <div class="card border-4 border-success" style="width: 18rem;">
                     <img src="images/test01.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -39,7 +39,7 @@
                   </div>
             </div>
             <div class="col-lg-3">
-                <div class="card border-danger" style="width: 18rem;">
+                <div class="card border-4 border-success" style="width: 18rem;">
                     <img src="images/test01.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
