--- a/index.html
+++ b/index.html
@@ -47,6 +47,17 @@
                   </div>
             </div>
         </div>
+        <div class="row justify-content-between my-3">
+          <div class="col-lg-12">
+            <h2 class="text-center">Seguimos aprendiendo</h2>
+          </div>
+          <div class="col-lg-6 text-center">
+            Seguir aprendiendo es no detenerse.
+          </div>
+          <div class="col-lg-6 text-center">
+            No detenerse es seguir aprendiendo.
+          </div>
+        </div>
     </div>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/popper.min.js"></script>
