--- a/index.html
+++ b/index.html
@@ -48,14 +48,16 @@
             </div>
         </div>
         <div class="row justify-content-between my-3">
-          <div class="col-lg-12">
+          <div class="col-lg-12 mb-3">
             <h2 class="text-center">Seguimos aprendiendo</h2>
           </div>
           <div class="col-lg-6 text-center">
-            Seguir aprendiendo es no detenerse.
+            Seguir aprendiendo es no detenerse. <br>
+            <button class="btn btn-success">Seguir aprendiendo</button>
           </div>
           <div class="col-lg-6 text-center">
-            No detenerse es seguir aprendiendo.
+            No detenerse es seguir aprendiendo. <br>
+            <button class="btn btn-success">Seguir aprendiendo</button>
           </div>
         </div>
     </div>
