--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container-lg mt-3">
         <div class="row mb-4">
             <div class="col-lg-12">
-                <h1 class="text-center">Bienvenido a GitHub</h1>
+                <h1 class="text-center">Bienvenido a todos</h1>
             </div>
         </div>
         <div class="row">
