--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
                 </div>
           </div>
       </div>
+      <div class="alert alert-success alert-dismissible fade show mt-2" role="alert">
+        <strong>Holy guacamole!</strong> Lo estas haciendo bien junior.
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      </div>
     </div>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/popper.min.js"></script>
